syntax = "proto2";

package thor.dl;

import "det.proto";

message InstanceSegmentation{
    optional Detection2D detection = 1;
    repeated float mask = 2;
    optional int32 mask_w = 3;
    optional int32 mask_h = 4;
}

message FramePossession {
    repeated InstanceSegmentation instances = 1;
    repeated Detection2D detections = 2;
}

